# crewAI

./: .gitignore
socialmedia_crew/: README.md  pyproject.toml
socialmedia_crew/src/socialmedia_crew/: crew.py  main.py
socialmedia_crew/src/socialmedia_crew/config/: agents.yaml  tasks.yaml
