[project]
name = "socialmedia_crew"
version = "0.1.0"
description = "socialmedia-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
socialmedia_crew = "socialmedia_crew.main:run"
run_crew = "socialmedia_crew.main:run"
train = "socialmedia_crew.main:train"
replay = "socialmedia_crew.main:replay"
test = "socialmedia_crew.main:test"
run_with_trigger = "socialmedia_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
